syntax = "proto3";

package minipos;

option go_package = "./pb";

// Product Service
service ProductService {
  rpc GetProduct(GetProductRequest) returns (Product);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc CreateProduct(CreateProductRequest) returns (Product);
  rpc UpdateProduct(UpdateProductRequest) returns (Product);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc DeductStock(DeductStockRequest) returns (DeductStockResponse);
  rpc GetProductByQR(GetProductByQRRequest) returns (Product);
}

// Transaction Service
service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (Transaction);
  rpc GetTransaction(GetTransactionRequest) returns (Transaction);
  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
  rpc GetReportSummary(GetReportSummaryRequest) returns (ReportSummary);
}

// Business Service
service BusinessService {
  rpc GetBusiness(GetBusinessRequest) returns (Business);
  rpc UpdateBusiness(UpdateBusinessRequest) returns (Business);
  rpc GetInviteCode(GetInviteCodeRequest) returns (InviteCodeResponse);
  rpc JoinBusiness(JoinBusinessRequest) returns (JoinBusinessResponse);
}

// Messages

// Common
message Empty {}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// Product Messages
message Product {
  string id = 1;
  string business_id = 2;
  string name = 3;
  double cost_price = 4;
  double sale_price = 5;
  int32 stock = 6;
  int32 low_stock_threshold = 7;
  string qr_code = 8;
  optional string image_url = 9;
  optional string category_id = 10;
  optional string category_name = 11;
  Timestamp created_at = 12;
  Timestamp updated_at = 13;
}

message GetProductRequest {
  string id = 1;
  string business_id = 2;
}

message GetProductByQRRequest {
  string qr_code = 1;
  string business_id = 2;
}

message ListProductsRequest {
  string business_id = 1;
  optional string search = 2;
  optional string category_id = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message CreateProductRequest {
  string business_id = 1;
  string name = 2;
  double cost_price = 3;
  double sale_price = 4;
  int32 stock = 5;
  int32 low_stock_threshold = 6;
  optional string category_id = 7;
  optional string image_url = 8;
}

message UpdateProductRequest {
  string id = 1;
  string business_id = 2;
  optional string name = 3;
  optional double cost_price = 4;
  optional double sale_price = 5;
  optional int32 stock = 6;
  optional int32 low_stock_threshold = 7;
  optional string category_id = 8;
  optional string image_url = 9;
}

message DeleteProductRequest {
  string id = 1;
  string business_id = 2;
}

message DeleteProductResponse {
  bool success = 1;
}

message DeductStockRequest {
  string product_id = 1;
  string business_id = 2;
  int32 quantity = 3;
}

message DeductStockResponse {
  bool success = 1;
  int32 new_stock = 2;
  Product product = 3;
}

// Transaction Messages
message TransactionItem {
  string id = 1;
  string product_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double unit_price = 5;
  double cost_price = 6;
  double total = 7;
}

message Transaction {
  string id = 1;
  string business_id = 2;
  optional string staff_id = 3;
  optional string staff_name = 4;
  repeated TransactionItem items = 5;
  double subtotal = 6;
  double discount = 7;
  double tax = 8;
  double total = 9;
  double profit = 10;
  string payment_method = 11;
  optional string notes = 12;
  Timestamp created_at = 13;
}

message CreateTransactionRequest {
  string business_id = 1;
  string staff_id = 2;
  repeated TransactionItemInput items = 3;
  double discount_percent = 4;
  string payment_method = 5;
  optional string notes = 6;
}

message TransactionItemInput {
  string product_id = 1;
  int32 quantity = 2;
}

message GetTransactionRequest {
  string id = 1;
  string business_id = 2;
}

message ListTransactionsRequest {
  string business_id = 1;
  optional Timestamp start_date = 2;
  optional Timestamp end_date = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  int32 total = 2;
}

message GetReportSummaryRequest {
  string business_id = 1;
  Timestamp start_date = 2;
  Timestamp end_date = 3;
}

message ReportSummary {
  double total_revenue = 1;
  double total_profit = 2;
  int32 total_transactions = 3;
  double average_transaction = 4;
  repeated TopProduct top_products = 5;
  repeated DailySales daily_sales = 6;
}

message TopProduct {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
  double revenue = 4;
}

message DailySales {
  string date = 1;
  double revenue = 2;
  int32 transactions = 3;
}

// Business Messages
message Business {
  string id = 1;
  string name = 2;
  string currency = 3;
  double tax_rate = 4;
  optional string receipt_message = 5;
  string invite_code = 6;
  string owner_id = 7;
  Timestamp created_at = 8;
  Timestamp updated_at = 9;
}

message GetBusinessRequest {
  string id = 1;
}

message UpdateBusinessRequest {
  string id = 1;
  optional string name = 2;
  optional string currency = 3;
  optional double tax_rate = 4;
  optional string receipt_message = 5;
}

message GetInviteCodeRequest {
  string business_id = 1;
}

message InviteCodeResponse {
  string invite_code = 1;
}

message JoinBusinessRequest {
  string invite_code = 1;
  string user_id = 2;
}

message JoinBusinessResponse {
  bool success = 1;
  string status = 2; // "pending", "approved", "already_member"
  string business_name = 3;
}
